# newsletter

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
migrations/: 001_initial.sql  002_newsletters.sql  003_click_url.sql  004_template_management.sql  005_bounced_at.sql  006_subscribe_email_log.sql  007_update_default_template_logo.sql  008_unsubscribe_events.sql  009_update_template_web_url.sql  010_admins.sql  011_audit_log.sql  012_admin_login_log.sql  013_update_template_logo_png.sql
scripts/: migrate_legacy.rs
src/: audit.rs  auth.rs  captcha.rs  config.rs  csv_handler.rs  db.rs  email.rs  error.rs  main.rs  newsletter.rs  security.rs  shorturl.rs
src/routes/: admin.rs  admin_mgmt.rs  archive.rs  manage.rs  mod.rs  newsletter.rs  subscribe.rs  template.rs  tracking.rs  upload.rs
src/templates/: base.html  error.html  manage.html  newsletter_view.html  newsletters.html  subscribe.html  verify_success.html
src/templates/admin/: _nav.html  admins.html  audit_log.html  dashboard.html  login.html  newsletter_edit.html  newsletter_preview.html  newsletter_stats.html  newsletters.html  stats.html  subscribers.html  template_edit.html  template_preview.html  templates.html
src/templates/emails/: already_subscribed.html  magic_link.html  verification.html
