[package]
name = "coscup-newsletter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "coscup-newsletter"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[[bin]]
name = "coscup-newsletter"
path = "src/main.rs"

[[bin]]
name = "migrate-legacy"
path = "scripts/migrate_legacy.rs"

[dependencies]
# Web
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower = "0.5"

# Template
tera = "1"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Security
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
subtle = "2"
hex = "0.4"

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "hostname"] }

# Markdown / HTML processing
comrak = "0.35"
regex = "1"
urlencoding = "2"

# Misc
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "2"
axum-extra = { version = "0.10", features = ["cookie"] }
async-trait = "0.1"
serde_json = "1.0.149"
time = "0.3.47"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
